apps/base/foobar/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: foobar
  name: foobar
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: foobar
